Cleanup: Remove unused assets and update paths to match directory structure

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Pacifico&family=Playfair+Display:wght@400;500;600;700&family=Outfit:wght@300;400;500;600&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="Assets/css/styles.css">
 </head>
 
 <body>
@@ -22,7 +22,7 @@
     <nav class="navbar">
         <div class="nav-container">
             <a href="#" class="logo">
-                <img src="assets/images/logo.png" alt="Faboesi Logo" class="logo-icon" width="32" height="32">
+                <img src="Assets/images/logo.png" alt="Faboesi Logo" class="logo-icon" width="32" height="32">
                 <span class="logo-text">Faboesi</span>
             </a>
             <ul class="nav-links">
@@ -61,9 +61,9 @@
         </div>
         <div class="hero-visual">
             <div class="honey-drip"></div>
-            <div class="floating-honeycomb hc-1"><img src="assets/images/logo.png" alt="" class="floating-logo"></div>
-            <div class="floating-honeycomb hc-2"><img src="assets/images/logo.png" alt="" class="floating-logo"></div>
-            <div class="floating-honeycomb hc-3"><img src="assets/images/logo.png" alt="" class="floating-logo"></div>
+            <div class="floating-honeycomb hc-1"><img src="Assets/images/logo.png" alt="" class="floating-logo"></div>
+            <div class="floating-honeycomb hc-2"><img src="Assets/images/logo.png" alt="" class="floating-logo"></div>
+            <div class="floating-honeycomb hc-3"><img src="Assets/images/logo.png" alt="" class="floating-logo"></div>
         </div>
     </section>
 
@@ -81,7 +81,7 @@
             <div class="product-card">
                 <div class="product-badge bestseller">Bestseller</div>
                 <div class="product-image-container">
-                    <img src="assets/images/products/parwa.jpg" alt="Parwa Honing" class="product-image">
+                    <img src="Assets/images/products/parwa.jpg" alt="Parwa Honing" class="product-image">
                     <div class="product-glow"></div>
                 </div>
                 <div class="product-info">
@@ -100,7 +100,7 @@
             <!-- Product Card 2 -->
             <div class="product-card">
                 <div class="product-image-container">
-                    <img src="assets/images/products/mira_oedoe.jpg" alt="Mira Oedoe Honing" class="product-image">
+                    <img src="Assets/images/products/mira_oedoe.jpg" alt="Mira Oedoe Honing" class="product-image">
                     <div class="product-glow"></div>
                 </div>
                 <div class="product-info">
@@ -119,7 +119,7 @@
             <!-- Product Card 3 -->
             <div class="product-card">
                 <div class="product-image-container">
-                    <img src="assets/images/logo.png" alt="Jamoen Honing" class="product-image"
+                    <img src="Assets/images/logo.png" alt="Jamoen Honing" class="product-image"
                         style="object-fit: contain; padding: 2rem;">
                     <div class="product-glow"></div>
                 </div>
@@ -147,7 +147,7 @@
     <section class="features-section">
         <div class="features-grid">
             <div class="feature-card">
-                <div class="feature-icon"><img src="assets/images/logo.png" alt="Faboesi" class="feature-logo"></div>
+                <div class="feature-icon"><img src="Assets/images/logo.png" alt="Faboesi" class="feature-logo"></div>
                 <h3>Puur Honing</h3>
                 <p>Pure honing uit bossen, oerwouden en savannes.</p>
             </div>
@@ -180,7 +180,7 @@
     <footer class="footer">
         <div class="footer-content">
             <div class="footer-brand">
-                <img src="assets/images/logo.png" alt="Faboesi Logo" class="logo-icon" width="32" height="32">
+                <img src="Assets/images/logo.png" alt="Faboesi Logo" class="logo-icon" width="32" height="32">
                 <span class="logo-text">Faboesi</span>
                 <p>Voor meer informatie, bel +5978725949.</p>
             </div>
@@ -211,7 +211,7 @@
         </div>
     </footer>
 
-    <script src="assets/js/script.js"></script>
+    <script src="Assets/js/script.js"></script>
 </body>
 
 </html>
