--- a/winkels.html
+++ b/winkels.html
@@ -11,7 +11,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Outfit:wght@300;400;500;600&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="Assets/css/styles.css">
     <style>
         /* Stores Page Specific Styles */
         .stores-page {
@@ -121,7 +121,7 @@
     <nav class="navbar">
         <div class="nav-container">
             <a href="index.html" class="logo">
-                <img src="assets/images/logo.png" alt="Faboesi Logo" class="logo-icon" width="32" height="32">
+                <img src="Assets/images/logo.png" alt="Faboesi Logo" class="logo-icon" width="32" height="32">
                 <span class="logo-text">Faboesi</span>
             </a>
             <ul class="nav-links">
@@ -222,7 +222,7 @@
     <footer class="footer">
         <div class="footer-content">
             <div class="footer-brand">
-                <img src="assets/images/logo.png" alt="Faboesi Logo" class="logo-icon" width="32" height="32">
+                <img src="Assets/images/logo.png" alt="Faboesi Logo" class="logo-icon" width="32" height="32">
                 <span class="logo-text">Faboesi</span>
                 <p></p>
             </div>
