--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Pacifico&family=Playfair+Display:wght@400;500;600;700&family=Outfit:wght@300;400;500;600&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="Assets/css/styles.css">
     <style>
         /* About Page Specific Styles */
         .about-page {
@@ -112,7 +112,7 @@
     <nav class="navbar">
         <div class="nav-container">
             <a href="index.html" class="logo">
-                <img src="assets/images/logo.png" alt="Faboesi Logo" class="logo-icon" width="32" height="32">
+                <img src="Assets/images/logo.png" alt="Faboesi Logo" class="logo-icon" width="32" height="32">
                 <span class="logo-text">Faboesi</span>
             </a>
             <ul class="nav-links">
@@ -137,7 +137,7 @@
             <!-- Story Section -->
             <section class="about-section">
                 <div class="about-image-container">
-                    <img src="assets/images/parwa_bottle.png" alt="Pure Honing" class="about-image">
+                    <img src="Assets/images/parwa_bottle.png" alt="Pure Honing" class="about-image">
                 </div>
                 <div class="about-text">
                     <h2>Onze Geschiedenis</h2>
@@ -167,7 +167,7 @@
             <!-- Mission Section -->
             <section class="about-section reverse">
                 <div class="about-image-container">
-                    <img src="assets/images/logo.png" alt="Duurzaamheid" class="about-image"
+                    <img src="Assets/images/logo.png" alt="Duurzaamheid" class="about-image"
                         style="object-fit: contain; padding: 2rem;">
                 </div>
                 <div class="about-text">
@@ -316,7 +316,7 @@
     <footer class="footer">
         <div class="footer-content">
             <div class="footer-brand">
-                <img src="assets/images/logo.png" alt="Faboesi Logo" class="logo-icon" width="32" height="32">
+                <img src="Assets/images/logo.png" alt="Faboesi Logo" class="logo-icon" width="32" height="32">
                 <span class="logo-text">Faboesi</span>
                 <p>Voor meer informatie, bel +5978725949.</p>
             </div>
@@ -346,7 +346,7 @@
         </div>
     </footer>
 
-    <script src="assets/js/script.js"></script>
+    <script src="Assets/js/script.js"></script>
 </body>
 
 </html>
