--- a/producten.html
+++ b/producten.html
@@ -11,7 +11,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Pacifico&family=Playfair+Display:wght@400;500;600;700&family=Outfit:wght@300;400;500;600&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="Assets/css/styles.css">
     <style>
         /* Products Page Specific Styles */
         .products-page {
@@ -211,7 +211,7 @@
     <nav class="navbar">
         <div class="nav-container">
             <a href="index.html" class="logo">
-                <img src="assets/images/logo.png" alt="Faboesi Logo" class="logo-icon" width="32" height="32">
+                <img src="Assets/images/logo.png" alt="Faboesi Logo" class="logo-icon" width="32" height="32">
                 <span class="logo-text">Faboesi</span>
             </a>
             <ul class="nav-links">
@@ -238,7 +238,7 @@
             <article class="product-card-horizontal">
                 <div class="product-image-container">
                     <div class="product-badge bestseller">Bestseller</div>
-                    <img src="assets/images/products/parwa.jpg" alt="Parwa Honing" class="product-image">
+                    <img src="Assets/images/products/parwa.jpg" alt="Parwa Honing" class="product-image">
                     <div class="product-glow"></div>
                 </div>
                 <div class="product-info">
@@ -266,7 +266,7 @@
             <!-- Product Card 2 - Mira Oedoe -->
             <article class="product-card-horizontal">
                 <div class="product-image-container">
-                    <img src="assets/images/products/mira_oedoe.jpg" alt="Mira Oedoe Honing" class="product-image">
+                    <img src="Assets/images/products/mira_oedoe.jpg" alt="Mira Oedoe Honing" class="product-image">
                     <div class="product-glow"></div>
                 </div>
                 <div class="product-info">
@@ -292,7 +292,7 @@
             <!-- Product Card 3 - Jamoen -->
             <article class="product-card-horizontal">
                 <div class="product-image-container">
-                    <img src="assets/images/logo.png" alt="Jamoen Honing" class="product-image"
+                    <img src="Assets/images/logo.png" alt="Jamoen Honing" class="product-image"
                         style="object-fit: contain; padding: 2rem;">
                     <div class="product-glow"></div>
                 </div>
@@ -317,7 +317,7 @@
             <!-- Product Card 4 - Bosbloemen -->
             <article class="product-card-horizontal">
                 <div class="product-image-container">
-                    <img src="assets/images/logo.png" alt="Bosbloemen Honing" class="product-image"
+                    <img src="Assets/images/logo.png" alt="Bosbloemen Honing" class="product-image"
                         style="object-fit: contain; padding: 2rem;">
                     <div class="product-glow"></div>
                 </div>
@@ -353,7 +353,7 @@
             <!-- Propolis Tinctuur -->
             <article class="product-card-horizontal">
                 <div class="product-image-container">
-                    <img src="assets/images/products/propolis.jpg" alt="Propolis Tinctuur" class="product-image"
+                    <img src="Assets/images/products/propolis.jpg" alt="Propolis Tinctuur" class="product-image"
                         style="object-fit: cover;">
                 </div>
                 <div class="product-info">
@@ -372,7 +372,7 @@
             <!-- Bijenbrood -->
             <article class="product-card-horizontal">
                 <div class="product-image-container">
-                    <img src="assets/images/logo.png" alt="Bijenbrood" class="product-image"
+                    <img src="Assets/images/logo.png" alt="Bijenbrood" class="product-image"
                         style="object-fit: contain; padding: 2rem;">
                 </div>
                 <div class="product-info">
@@ -389,7 +389,7 @@
             <!-- Raathoning -->
             <article class="product-card-horizontal">
                 <div class="product-image-container">
-                    <img src="assets/images/products/raathoning.jpg" alt="Raathoning" class="product-image"
+                    <img src="Assets/images/products/raathoning.jpg" alt="Raathoning" class="product-image"
                         style="object-fit: cover;">
                 </div>
                 <div class="product-info">
@@ -403,7 +403,7 @@
             <!-- Immuun Booster -->
             <article class="product-card-horizontal">
                 <div class="product-image-container">
-                    <img src="assets/images/products/immuun_booster.jpg" alt="Immuun Booster" class="product-image"
+                    <img src="Assets/images/products/immuun_booster.jpg" alt="Immuun Booster" class="product-image"
                         style="object-fit: cover;">
                 </div>
                 <div class="product-info">
@@ -419,7 +419,7 @@
             <!-- Zalven (Combined) -->
             <article class="product-card-horizontal">
                 <div class="product-image-container">
-                    <img src="assets/images/products/zalven.jpg" alt="Natuurlijke Zalven" class="product-image"
+                    <img src="Assets/images/products/zalven.jpg" alt="Natuurlijke Zalven" class="product-image"
                         style="object-fit: cover;">
                 </div>
                 <div class="product-info">
@@ -443,7 +443,7 @@
     <footer class="footer">
         <div class="footer-content">
             <div class="footer-brand">
-                <img src="assets/images/logo.png" alt="Faboesi Logo" class="logo-icon" width="32" height="32">
+                <img src="Assets/images/logo.png" alt="Faboesi Logo" class="logo-icon" width="32" height="32">
                 <span class="logo-text">Faboesi</span>
                 <p>Voor meer informatie, bel 8725949.</p>
             </div>
@@ -473,7 +473,7 @@
         </div>
     </footer>
 
-    <script src="assets/js/script.js"></script>
+    <script src="Assets/js/script.js"></script>
 </body>
 
 </html>
