--- a/index.html
+++ b/index.html
@@ -119,8 +119,7 @@
             <!-- Product Card 3 -->
             <div class="product-card">
                 <div class="product-image-container">
-                    <img src="Assets/images/logo.png" alt="Jamoen Honing" class="product-image"
-                        style="object-fit: contain; padding: 2rem;">
+                    <img src="Assets/images/products/jamoen.jpg" alt="Jamoen Honing" class="product-image">
                     <div class="product-glow"></div>
                 </div>
                 <div class="product-info">
@@ -207,7 +206,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>© 2025 Faboesi. Alle rechten voorbehouden. Suriname 🇸🇷</p>
+            <p>© 2026 Faboesi. Alle rechten voorbehouden. Suriname 🇸🇷</p>
         </div>
     </footer>
 
